--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.6",
+    "@chakra-ui/theme-tools": "^2.0.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^6.5.1",
